# policy-rs

./: .env.example  .gitignore  CHANGELOG.md  Cargo.toml  ENGINE_PLAN.md  IMPLEMENTATION_PLAN.md  README.md  Taskfile.yml  build.rs
.github/workflows/: bot-signoff.yaml  publish.yaml  publish.yml  release-please.yaml
.hermit/rust/: .global-cache
.hermit/rust/registry/cache/index.crates.io-1949cf8c6b5b557f/: libc-0.2.178.crate  syn-2.0.111.crate
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/3/s/: syn
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/fi/xe/: fixedbitset
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/ge/tr/: getrandom
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/in/de/: indexmap
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/li/bc/: libc
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/mu/lt/: multimap
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pe/tg/: petgraph
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pr/et/: prettyplease
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pr/oc/: proc-macro2
.hermit/rust/registry/index/index.crates.io-1949cf8c6b5b557f/.cache/pr/os/: prost  prost-build  prost-derive  prost-types
benches/: engine.rs
coverage/: tarpaulin-report.html
examples/: basic_usage.rs  config_providers.rs  custom_provider.rs  grpc_provider.rs  http_provider.rs  multiple_providers.rs  transforms.rs
examples/common/: mod.rs
proto/tero/policy/v1/: log.proto  policy.proto
src/: config.rs  error.rs  field.rs  lib.rs  policy.rs  registry.rs
src/engine/: compiled.rs  keep.rs  match_key.rs  matchable.rs  mod.rs  rate_limiter.rs  transform.rs  transformable.rs
src/proto/: google.api.rs  mod.rs  opentelemetry.proto.common.v1.rs  tero.policy.v1.rs
src/provider/: file.rs  grpc.rs  http.rs  mod.rs  sync.rs
testdata/: policies.json
