[package]
name = "policy-rs"
version = "0.0.1"
edition = "2024"
description = "Policy library for working with protobuf-defined policy objects"
license = "Apache-2.0"

[lib]
doctest = false

[dependencies]
hyperscan-tokio = "0.1"
prost = "0.13"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1", features = ["rt", "macros"] }

[build-dependencies]
prost-build = "0.13"
