[package]
name = "policy-rs"
version = "0.0.1"
edition = "2024"
description = "Policy library for working with protobuf-defined policy objects"
license = "Apache-2.0"

[lib]
doctest = false

[features]
default = []
http = ["reqwest"]
grpc = ["tonic"]

[dependencies]
hyperscan-tokio = "0.1"
prost = "0.13"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "time"] }
tonic = { version = "0.12", optional = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }
dotenvy = "0.15"
tempfile = "3"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }

[[bench]]
name = "engine"
harness = false

[[example]]
name = "http_provider"
required-features = ["http"]

[[example]]
name = "grpc_provider"
required-features = ["grpc"]

[build-dependencies]
prost-build = "0.13"
tonic-build = "0.12"
